Fix submit button align
#134

--- a/app/javascript/containers/UserSettings/UserSettings.sass
+++ b/app/javascript/containers/UserSettings/UserSettings.sass
@@ -64,7 +64,7 @@
     display: flex
     justify-content: flex-end
     padding-top: 20px
-    padding-right: 20px
+    padding-right: 60px
 
   .submitButton
     width: 170px
